# wacomcpl

./: 0001-Add-DTU-2231-to-LCD-range.patch  0001-Check-for-AC_CHECK_LIB-success-when-testing-for-Tcl-.patch  0001-Fill-the-default-button-array-with-up-to-max-buttons.patch  0002-Add-Cintiq-model-support.patch  0002-Rename-getDeviceOptionProc-to-updateDeviceOptionProc.patch  0003-Update-the-eraser-with-twinview-settings-711619.patch  0004-Allow-for-host-specific-wacomcplrc-711618.patch  0005-Read-default-area-values-before-starting-calibration.patch  0006-Calculate-the-device-relative-area-coordinates-not-s.patch  0007-When-resetting-TwinView-to-none-reset-the-TVResoluti.patch  Makefile  README.md  wacomcpl.spec
src/: AUTHORS  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  wacomcpl-exec  wacomcpl.in  wacomcpl.man  wacomcpl.sh
